--- a/index.html
+++ b/index.html
@@ -12,11 +12,22 @@
     <h1>Welcome to TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a>,</li>
-                <li><a href="contact.html">Contact</a></li>
+               To add a logo using a Unicode character (as requested), add this to your HTML header:
+
+html
+<header>
+    <nav>
+        <ul>
+            <li class="logo">☕</li>  <!-- Coffee cup logo -->
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </nav>
+</header>
+
+
+
+
             </ul>
         </nav>
     </header> 
