--- a/tweets.html
+++ b/tweets.html
@@ -10,9 +10,18 @@
 <body>
          <header>
         <ul>
+           To add a logo using a Unicode character (as requested), add this to your HTML header:
+
+html
+<header>
+    <nav>
+        <ul>
+            <li class="logo">☕</li>  <!-- Coffee cup logo -->
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
+    </nav>
+
 </header>
 <main>
     <article>
