--- a/.vscode/css_advanced/index.html
+++ b/.vscode/css_advanced/index.html
@@ -570,7 +570,7 @@
             <div class="pros-grid">
                 <div class="pro-card">
                     <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Johnny" class="pro-avatar">
-                    <h3 class="pro-name">Johnny</h3>
+                    <h3 class="pro-name">Johnny Massey</h3>
                     <p class="pro-title">Best Japanese 2011</p>
                 </div>
                 <div class="pro-card">
@@ -580,12 +580,12 @@
                 </div>
                 <div class="pro-card">
                     <img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Ever written" class="pro-avatar">
-                    <h3 class="pro-name">Ever written</h3>
+                    <h3 class="pro-name">Bruce Walters</h3>
                     <p class="pro-title">Best Japanese, for printmaker 2013</p>
                 </div>
                 <div class="pro-card">
                     <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Hong Kong" class="pro-avatar">
-                    <h3 class="pro-name">Hong Kong</h3>
+                    <h3 class="pro-name">Nannie Lawrence</h3>
                     <p class="pro-title">Hong Kong News 2020 - 2019</p>
                 </div>
             </div>
